--- a/app/src/main/res/layout/chat_top.xml
+++ b/app/src/main/res/layout/chat_top.xml
@@ -14,7 +14,7 @@
         app:layout_constraintGuide_percent="0.95" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/home_page"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
